[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beancount-importer-volksbank"
version = "0.1.0"
description = "Importer for beancount to convert CSV files exported from the online banking of Volksbank or GLS Bank."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Fjanks" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "beancount",
    "beangulp",
]

[project.urls]
Issues = "https://github.com/Fjanks/beancount-importer-volksbank/issues"
Source = "https://github.com/Fjanks/beancount-importer-volksbank"
